unc-sdk-macros/src/core_impl/code_generator/snapshots/ext_basic.snap
---
source: unc-sdk-macros/src/core_impl/code_generator/item_trait_info.rs
assertion_line: 56
expression: pretty_print_syn_str(&actual).unwrap()
---
pub mod external_cross_contract {
    use super::*;
    #[must_use]
    pub struct ExternalCrossContractExt {
        pub(crate) account_id: ::unc_sdk::AccountId,
        pub(crate) deposit: ::unc_sdk::UncToken,
        pub(crate) static_gas: ::unc_sdk::Gas,
        pub(crate) gas_weight: ::unc_sdk::GasWeight,
    }
    impl ExternalCrossContractExt {
        pub fn with_attached_deposit(mut self, amount: ::unc_sdk::UncToken) -> Self {
            self.deposit = amount;
            self
        }
        pub fn with_static_gas(mut self, static_gas: ::unc_sdk::Gas) -> Self {
            self.static_gas = static_gas;
            self
        }
        pub fn with_unused_gas_weight(mut self, gas_weight: u64) -> Self {
            self.gas_weight = ::unc_sdk::GasWeight(gas_weight);
            self
        }
    }
    /// API for calling this contract's functions in a subsequent execution.
    pub fn ext(account_id: ::unc_sdk::AccountId) -> ExternalCrossContractExt {
        ExternalCrossContractExt {
            account_id,
            deposit: ::unc_sdk::UncToken::from_unc(0),
            static_gas: ::unc_sdk::Gas::from_gas(0),
            gas_weight: ::unc_sdk::GasWeight::default(),
        }
    }
    impl ExternalCrossContractExt {
        pub fn merge_sort(self, arr: Vec<u8>) -> ::unc_sdk::Promise {
            let __args = {
                #[derive(::unc_sdk::serde::Serialize)]
                #[serde(crate = "::unc_sdk::serde")]
                struct Input<'uncinput> {
                    arr: &'uncinput Vec<u8>,
                }
                let __args = Input { arr: &arr };
                ::unc_sdk::serde_json::to_vec(&__args)
                    .expect("Failed to serialize the cross contract args using JSON.")
            };
            ::unc_sdk::Promise::new(self.account_id)
                .function_call_weight(
                    ::std::string::String::from("merge_sort"),
                    __args,
                    self.deposit,
                    self.static_gas,
                    self.gas_weight,
                )
        }
        pub fn merge(self) -> ::unc_sdk::Promise {
            let __args = ::std::vec![];
            ::unc_sdk::Promise::new(self.account_id)
                .function_call_weight(
                    ::std::string::String::from("merge"),
                    __args,
                    self.deposit,
                    self.static_gas,
                    self.gas_weight,
                )
        }
    }
}
