unc-sdk-macros/src/core_impl/code_generator/snapshots/ext_basic_borsh.snap
---
source: unc-sdk-macros/src/core_impl/code_generator/ext.rs
assertion_line: 207
expression: pretty_print_syn_str(&actual).unwrap()
---
pub fn borsh_test(self, a: String) -> ::unc_sdk::Promise {
    let __args = {
        #[derive(::unc_sdk::borsh::BorshSerialize)]
        #[borsh(crate = "::unc_sdk::borsh")]
        struct Input<'uncinput> {
            a: &'uncinput String,
        }
        let __args = Input { a: &a };
        ::unc_sdk::borsh::to_vec(&__args)
            .expect("Failed to serialize the cross contract args using Borsh.")
    };
    ::unc_sdk::Promise::new(self.account_id)
        .function_call_weight(
            ::std::string::String::from("borsh_test"),
            __args,
            self.deposit,
            self.static_gas,
            self.gas_weight,
        )
}
