unc-sdk-macros/src/core_impl/code_generator/snapshots/ext_basic_json.snap
---
source: unc-sdk-macros/src/core_impl/code_generator/ext.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
pub fn method(self, k: &String) -> ::unc_sdk::Promise {
    let __args = {
        #[derive(::unc_sdk::serde::Serialize)]
        #[serde(crate = "::unc_sdk::serde")]
        struct Input<'uncinput> {
            k: &'uncinput String,
        }
        let __args = Input { k: &k };
        ::unc_sdk::serde_json::to_vec(&__args)
            .expect("Failed to serialize the cross contract args using JSON.")
    };
    ::unc_sdk::Promise::new(self.account_id)
        .function_call_weight(
            ::std::string::String::from("method"),
            __args,
            self.deposit,
            self.static_gas,
            self.gas_weight,
        )
}

