unc-sdk-macros/src/core_impl/code_generator/snapshots/handle_result_init.snap
---
source: unc-sdk-macros/src/core_impl/code_generator/item_impl_info.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
#[cfg(target_arch = "wasm32")]
#[no_mangle]
pub extern "C" fn new() {
    ::unc_sdk::env::setup_panic_hook();
    if ::unc_sdk::env::attached_deposit().as_attounc() != 0 {
        ::unc_sdk::env::panic_str("Method new doesn't accept deposit");
    }
    if ::unc_sdk::env::state_exists() {
        ::unc_sdk::env::panic_str("The contract has already been initialized");
    }
    let contract = Hello::new();
    match contract {
        ::std::result::Result::Ok(contract) => {
            ::unc_sdk::env::state_write(&contract);
        }
        ::std::result::Result::Err(err) => ::unc_sdk::FunctionError::panic(&err),
    }
}

